Modified keymap: MMB not behaving like RMB? #40653

Closed
opened 2014-06-16 10:03:36 +02:00 by wueo · 10 comments

in input > animation> change frame

i changed button to middle mouse but now i need to click left mouse button to get stay the cursor where i want. its not like with right mouse button that i just hold and release where i want. its realy annoying.

in input > animation> change frame i changed button to middle mouse but now i need to click left mouse button to get stay the cursor where i want. its not like with right mouse button that i just hold and release where i want. its realy annoying.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mushroomeo

Added subscriber: @mushroomeo

Added subscriber: @mont29

Added subscriber: @mont29

Please at least attach your custom keymap…

Please at least attach your custom keymap…
Bastien Montagne changed title from Input to Modified keymap: MMB not behaving like RMB? 2014-06-16 13:26:15 +02:00
Author

mykeys.py

here is it.

i have another problem if you press T > Rigid Body tools > active and passive buttons cant make anymore shortcuts. this is super time wasting . older versions i could make shortcuts but now not anymore.

[mykeys.py](https://archive.blender.org/developer/F94495/mykeys.py) here is it. i have another problem if you press T > Rigid Body tools > active and passive buttons cant make anymore shortcuts. this is super time wasting . older versions i could make shortcuts but now not anymore.

Thanks for the file.

Thanks for the file.

This issue was referenced by eb10cda135

This issue was referenced by eb10cda1356811d5ecbfa5cb09d8b947e0c2b194
Bastien Montagne self-assigned this 2014-08-18 16:38:39 +02:00

Org issue is easy to fix, will do soon.

Other reported one is different matter, will open new report for it (please do not mix issues in a same report).

Org issue is easy to fix, will do soon. Other reported one is different matter, will open new report for it (please do not mix issues in a same report).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit eb10cda135.

Closed by commit eb10cda135.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40653
No description provided.