Fix T40653: Modified keymap: MMB not behaving like RMB?

Modal frame_change was not terminating on mmb release event...